--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -3,7 +3,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background-color: chartreuse;
+  /* background-color: chartreuse; */
   border: none;
 }
 
@@ -11,7 +11,7 @@
   display: flex;
   flex-direction: column;
   height: 4rem;
-  background-color: bisque;
+  /* background-color: bisque; */
   justify-content: center;
 }
 
