--- a/src/containers/Pages/Home/HomePage.css
+++ b/src/containers/Pages/Home/HomePage.css
@@ -1,15 +1,21 @@
 .Homepage {
   width: calc(100% - 18.75%);
   min-height: 100vh;
-  background-color: burlywood;
+  background-color: #F5F8FC;
   /* background-color: #F5F8FC; */
   margin-left: 18.75%;
   padding: 32px 40px;
   box-sizing: border-box;
 }
 
+.homeContainer {
+  /* width: 100%;
+  max-height: 70%;
+  overflow: scroll; */
+}
+
 .Homepage h2 {
-  line-height: 1;
+  line-height: 1.3;
   font-size: 1.5rem;
 }
 
