--- a/src/containers/Pages/Management/Management.css
+++ b/src/containers/Pages/Management/Management.css
@@ -1,9 +1,86 @@
 .Management {
-    width: calc(100% - 18.75%);
-    min-height: 100vh;
-    background-color: burlywood;
-    /* background-color: #F5F8FC; */
-    margin-left: 18.75%;
-    padding: 32px 40px;
-    box-sizing: border-box;
+  width: calc(100% - 18.75%);
+  min-height: 100vh;
+  background-color: #f5f8fc;
+  /* background-color: #F5F8FC; */
+  margin-left: 18.75%;
+  padding: 32px 40px;
+  box-sizing: border-box;
+}
+
+.pageBody {
+  background-color: #ffffff;
+  height: calc(100vh - (4rem + 2rem + 1.5rem + 2rem));
+  margin-top: 1.5rem;
+  border-radius: 10px;
+  padding: 1.5rem;
+  box-sizing: border-box;
+}
+
+.pageBodyHeader {
+  height: 40px;
+  background-color: #ffffff;
+  display: flex;
+  align-items: center;
+  margin-bottom: 2rem;
+  justify-content: space-between;
+}
+
+.marginLeft {
+  margin-left: 40px;
+}
+
+.headerItem {
+  height: 100%;
+  display: flex;
+  align-items: center;
+}
+
+.pageBodyHeader a {
+  text-decoration: none;
+  font-size: 1rem;
+  color: #8a8fa1;
+}
+
+.pageBodyHeader button {
+  height: 100%;
+  font-size: 1rem;
+  font-weight: 600;
+  padding: 0 1rem;
+  border-radius: 4px;
+  border: none;
+  background-color: #6f8ae8;
+  color: #ffffff;
+  cursor: pointer;
+}
+
+.nestedPageBody {
+  width: 100%;
+  height: 300px;
+  overflow: auto;
+  background-color: rgb(13, 27, 41);
+}
+
+.nestedPageBody .item {
+  display: flex;
+  width: 100%;
+  height: 63px;
+  background-color: red;
+  margin: 24px 0;
+}
+
+.nestedPageBody::-webkit-scrollbar {
+  width: 6px;
+}
+
+.nestedPageBody::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+.nestedPageBody::-webkit-scrollbar-thumb {
+  background: lightgrey;
+}
+
+.nestedPageBody::-webkit-scrollbar-thumb:hover {
+  background: darkgray;
 }
