--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -32,7 +32,7 @@
 .Notification {
   height: 3rem;
   width: 3rem;
-  border-radius: 8px;
+  border-radius: 0.5rem;
   background-color: #6F8AE8;
 }
 
