--- a/src/components/ProductCard/ProductCard.css
+++ b/src/components/ProductCard/ProductCard.css
@@ -1,8 +1,6 @@
 .Card {
   width: 100%;
-  /* width: 189px; */
   height: 17.75rem;
-  /* background-color: white; */
   border: none;
   padding: 0;
   box-sizing: border-box;
@@ -13,7 +11,7 @@
   height: 11.8125rem;
   position: relative;
   border: none;
-  border-radius: 10px 10px 0 0;
+  border-radius: 0.625rem 0.625rem 0 0;
   background-image: url("https://post.healthline.com/wp-content/uploads/2020/09/Do_Apples_Affect_Diabetes_and_Blood_Sugar_Levels-732x549-thumbnail-1-732x549.jpg");
   background-size: cover;
   background-repeat: no-repeat;
@@ -24,26 +22,26 @@
   bottom: 1px;
   right: 1rem;
   height: 1.75rem;
-  min-width: 81px;
+  min-width: 5.0625rem;
   padding: 0.25rem 0.625rem;
   box-sizing: border-box;
   background-color: #FFFFFF;
-  border-radius: 4px 4px 0 0;
+  border-radius: 0.25rem 0.25rem 0 0;
   display: flex;
   align-items: center;
   font-size: 1rem;
 }
 
 .priceTag img {
-  width: 20px;
-  height: 20px;
-  margin-right: 4px;
+  width: 1.25rem;
+  height: 1.25rem;
+  margin-right: 0.25rem;
 }
 
 .productDetails {
   height: calc(17.75rem - 11.8125rem);
   background-color: #FFFFFF;
-  border-radius: 0 0 10px 10px;
+  border-radius: 0 0 0.625rem 0.625rem;
   padding: 1rem;
   box-sizing: border-box;
 }
