--- a/src/containers/Carosel/Carosel.css
+++ b/src/containers/Carosel/Carosel.css
@@ -3,6 +3,6 @@
   height: 16rem;
   background-color: darkgoldenrod;
   border: none;
-  border-radius: 10px;
+  border-radius: 0.625rem;
   margin: 1.5rem 0;
 }
