--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,10 @@ body {
 ::-webkit-scrollbar {
   width: 0;
 }
+
+@media screen and (max-width: 800px) {
+  html { font-size: 14px; }
+}
+@media screen and (max-width: 500px) {
+  html { font-size: 12px; }
+}
