--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -12,7 +12,6 @@
 .HeaderHeight {
   display: flex;
   height: 4rem;
-  /* background-color: bisque; */
   justify-content: center;
   align-items: center;
   margin-bottom: 2.5rem;
@@ -23,40 +22,19 @@
   width: 7.8125rem;
 }
 
-.Sidebar ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
-.Sidebar li {
-  display: flex;
-  align-items: center;
-  height: 3rem;
-  width: auto;
-  border-radius: 0.25rem;
-  padding: 0.75rem 1rem;
-  box-sizing: border-box;
-}
-
 .Sidebar a {
   text-decoration: none;
   font-size: 0.875rem;
   color: #8a8fa1;
 }
 
-/* .Sidebar li:hover a, .Sidebar:active a, .Sidebar a.active {
-  color: #6F8AE8;
-  font-weight: 600;
-} */
-
-.Sidebar a:hover,
-.Sidebar a:active {
+.Sidebar a:hover div {
   color: #6f8ae8;
   font-weight: 600;
+  background-color: #f5f6fa;
 }
 
-.Sidebar .Banner {
+.Banner {
   width: calc(18.75% - 2rem);
   position: fixed;
   bottom: 2.5rem;
@@ -84,7 +62,8 @@
   margin-right: 12px;
 }
 
-.Sidebar nav a:hover div {
+.activeLink div {
+  color: #6f8ae8;
   background-color: #f5f6fa;
+  font-weight: 600;
 }
-
