--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -57,8 +57,8 @@
 }
 
 .Sidebar nav a div img {
-  height: 24px;
-  width: 24px;
+  height: 1.5rem;
+  width: 1.5rem;
   margin-right: 12px;
 }
 
@@ -66,4 +66,15 @@
   color: #6f8ae8;
   background-color: #f5f6fa;
   font-weight: 600;
+}
+
+@media screen and (max-width: 800px) {
+  .Sidebar nav a div img {
+    height: 18px;
+    width: 18px;
+    margin-right: 4px;
+  }
+  .Sidebar nav a div {
+    padding: 4px 4px;
+  }
 }
