--- a/src/components/ProductCard/ProductCard.css
+++ b/src/components/ProductCard/ProductCard.css
@@ -25,7 +25,7 @@
   min-width: 5.0625rem;
   padding: 0.25rem 0.625rem;
   box-sizing: border-box;
-  background-color: #FFFFFF;
+  background-color: #ffffff;
   border-radius: 0.25rem 0.25rem 0 0;
   display: flex;
   align-items: center;
@@ -40,8 +40,31 @@
 
 .productDetails {
   height: calc(17.75rem - 11.8125rem);
-  background-color: #FFFFFF;
+  background-color: #ffffff;
   border-radius: 0 0 0.625rem 0.625rem;
-  padding: 1rem;
+  padding: 0.75rem 1rem;
   box-sizing: border-box;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.productDetails span {
+  font-size: 0.75rem;
+  font-weight: 600;
+  color: #6f8ae8;
+}
+.productDetails div {
+  height: calc(100% - 1.5625rem);
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+.productDetails h4 {
+  margin: 0;
+  margin-top: 0.375rem;
+  font-size: 1rem;
+  font-weight: 600;
+  color: #000000;
+  line-height: 1.3;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
