--- a/src/components/ManageBanners/ManageBanners.css
+++ b/src/components/ManageBanners/ManageBanners.css
@@ -19,8 +19,15 @@
   background-color: rgb(48, 48, 43);
   height: 100%;
 }
+.productImage img {
+  width: 100%;
+  height: 100%;
+  border-radius: 0.3125rem;
+  object-fit: cover;
+}
+
 .productLink {
-  font-size: 14px;
+  font-size: 0.875rem;
   color: #8a8fa1;
   height: 2.5rem;
   background-color: #f5f6fa;
@@ -92,6 +99,12 @@
   height: 4rem;
   width: 4rem;
   background-color: black;
+  border-radius: 0.375rem;
+}
+.productShowcase img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
   border-radius: 0.375rem;
 }
 
