--- a/src/components/Slider/Slider.css
+++ b/src/components/Slider/Slider.css
@@ -1,7 +1,7 @@
 .slider {
   width: 100%;
   height: 16rem;
-  background-color: darkgoldenrod;
+  background-color: #ffffff;
   border: none;
   border-radius: 0.625rem;
   margin: 1.5rem 0;
