--- a/src/components/UI/Form/FormBanner/FormBanner.css
+++ b/src/components/UI/Form/FormBanner/FormBanner.css
@@ -10,16 +10,17 @@
   border-radius: 0.375rem;
   margin-top: 2rem;
   color: white;
-  margin-left: calc(50% - 50px);
+  margin-left: calc(50% - 3.75rem);
+  cursor: pointer;
 }
 
-.input{
+.input {
   padding: 0.625rem 1rem;
   font-size: 0.875rem;
-  color: #8A8FA1;
+  color: #8a8fa1;
   box-sizing: border-box;
   width: 100%;
-  background: #F5F6FA;
+  background: #f5f6fa;
   border-radius: 0.25rem;
   outline: none;
   border: none;
