--- a/src/components/ManageBanners/ManageBanners.css
+++ b/src/components/ManageBanners/ManageBanners.css
@@ -25,7 +25,9 @@
   border-radius: 0.3125rem;
   object-fit: cover;
 }
-
+.marginRight {
+  margin-right: 1.2rem;
+}
 .productLink {
   display: flex;
   align-items: center;
@@ -116,6 +118,16 @@
   align-items: center;
 }
 
+.productNameWidth {
+  width: 35.76%;
+}
+.productPriceWidth {
+  width: calc(100% - 67.81%);
+}
+.marginRightCoin {
+  margin-right: 0.375rem;
+}
+
 @media screen and (max-width: 1030px) {
   .productShowcase {
     height: 3.2rem;
@@ -127,5 +139,54 @@
   .productShowcase {
     height: 2.8rem;
     width: 2.8rem;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .productLink {
+    width: calc(100% - 10.5rem);
+    padding: 7px 8px;
+  }
+  .productLink img {
+    margin-right: 6px;
+  }
+  .productImage {
+    width: 50px;
+  }
+
+  .productItem {
+    margin-top: 1rem;
+  }
+  .productShowcase {
+    height: 30px;
+    width: 30px;
+    background-color: black;
+    border-radius: 0.375rem;
+  }
+  .smallBtn {
+    height: 30px;
+    width: 30px;
+    cursor: pointer;
+  }
+  .marginRight {
+    margin-right: 4px;
+  }
+  .productNameWidth {
+    width: 30.76%;
+  }
+  .productPriceWidth {
+    width: calc(100% - 62.81%);
+  }
+  .marginRightCoin {
+    margin-right: 2px;
+  }
+}
+
+@media screen and (max-width: 380px) {
+  .productNameWidth {
+    width: 28.76%;
+  }
+  .productPriceWidth {
+    width: calc(100% - 60.81%);
   }
 }
