--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -55,7 +55,7 @@
   padding: 0.75rem 1rem;
   box-sizing: border-box;
 }
-
+/* skfkjsladfkjsd */
 .Sidebar nav a div img {
   height: 1.5rem;
   width: 1.5rem;
@@ -68,7 +68,65 @@
   font-weight: 600;
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 500px) {
+  .Sidebar {
+    z-index: 300;
+    width: 100%;
+    height: 55px;
+    background-color: #ffffff;
+    /* padding: 0 10px; */
+    box-sizing: border-box;
+    display: flex;
+    align-items: center;
+    position: fixed;
+    bottom: 0;
+    top: calc(100vh - 55px);
+    left: 0;
+    /* display: none; */
+  }
+  nav {
+    /* background-color: rgb(75, 37, 37); */
+    display: flex;
+    width: 100%;
+    padding: 0;
+    justify-content: space-between;
+  }
+  .HeaderHeight {
+    display: none;
+  }
+  .Sidebar a:hover div {
+    color: #6f8ae8;
+    font-weight: 600;
+  }
+  .Banner {
+    display: none;
+  }
+  .Sidebar nav a div {
+    margin: 0;
+    display: flex;
+    align-items: center;
+    /* font-size: 10px; */
+    width: 80px;
+    flex-direction: column;
+    /* background-color: blueviolet; */
+    height: auto;
+    padding: 0.75rem 1rem;
+    box-sizing: border-box;
+  }
+  .Sidebar nav a div img {
+    height: 24px;
+    width: 24px;
+    margin-right: 0;
+  }
+  .activeLink div {
+    background-color: white;
+  }
+  .Sidebar a:hover div {
+    background-color: white;
+  }
+}
+
+@media screen and (max-width: 800px) and (min-width: 500px) {
   .Sidebar nav a div img {
     height: 18px;
     width: 18px;
