--- a/src/components/UI/Loader/Loader.css
+++ b/src/components/UI/Loader/Loader.css
@@ -4,12 +4,12 @@
   background: #6F8AE8;
   -webkit-animation: load1 1s infinite ease-in-out;
   animation: load1 1s infinite ease-in-out;
-  width: 1em;
-  height: 4em;
+  width: 1rem;
+  height: 4rem;
 }
 .Loader {
   color: #6F8AE8;
-  text-indent: -9999em;
+  text-indent: -9999rem;
   margin: 88px auto;
   position: relative;
   font-size: 11px;
@@ -26,23 +26,23 @@
   content: '';
 }
 .Loader:before {
-  left: -1.5em;
+  left: -1.5rem;
   -webkit-animation-delay: -0.32s;
   animation-delay: -0.32s;
 }
 .Loader:after {
-  left: 1.5em;
+  left: 1.5rem;
 }
 @-webkit-keyframes load1 {
   0%,
   80%,
   100% {
     box-shadow: 0 0;
-    height: 4em;
+    height: 4rem;
   }
   40% {
-    box-shadow: 0 -2em;
-    height: 5em;
+    box-shadow: 0 -2rem;
+    height: 5rem;
   }
 }
 @keyframes load1 {
@@ -50,10 +50,10 @@
   80%,
   100% {
     box-shadow: 0 0;
-    height: 4em;
+    height: 4rem;
   }
   40% {
-    box-shadow: 0 -2em;
-    height: 5em;
+    box-shadow: 0 -2rem;
+    height: 5rem;
   }
 }
